2006-03-11  Bruno Haible  <bruno@clisp.org>

	* msgmerge-compendium-5: New file.
	* msgmerge-v.comp.po: New file, from Clytie Siddall.
	* msgmerge-v.pot: New file, from KDE project.
	* msgmerge-v.out: New file.
	* Makefile.am (TESTS): Add msgmerge-compendium-5.
	(EXTRA_DIST): Add msgmerge-v.comp.po, msgmerge-v.pot, msgmerge-v.out.

2006-02-12  Bruno Haible  <bruno@clisp.org>

	* xgettext-c-14: New file.
	* format-boost-1: New file.
	* format-boost-2: New file.
	* Makefile.am (TESTS): Add them.

2006-02-12  Bruno Haible  <bruno@clisp.org>

	* xgettext-c-13: New file.
	* Makefile.am (TESTS): Add it.

2006-02-12  Bruno Haible  <bruno@clisp.org>

	* xgettext-c-12: New file.
	* Makefile.am (TESTS): Add it.

2005-11-21  Bruno Haible  <bruno@clisp.org>

	* format-c-3: Put all non-option arguments after all option arguments,
	so that the test works 1. when POSIXLY_CORRECT is set, 2. on platforms
	whose getopt facility is POSIX compliant but not GNU libc compatible,
	such as Cygwin.
	* format-c-4: Likewise.
	* format-c-5: Likewise.
	* msgattrib-1: Likewise.
	* msgattrib-2: Likewise.
	* msgattrib-3: Likewise.
	* msgattrib-4: Likewise.
	* msgattrib-5: Likewise.
	* msgattrib-6: Likewise.
	* msgattrib-7: Likewise.
	* msgattrib-8: Likewise.
	* msgattrib-9: Likewise.
	* msgattrib-10: Likewise.
	* msgattrib-11: Likewise.
	* msgattrib-12: Likewise.
	* msgattrib-13: Likewise.
	* msgattrib-14: Likewise.
	* msgattrib-15: Likewise.
	* msgattrib-properties-1: Likewise.
	* msgcat-1: Likewise.
	* msgcat-11: Likewise.
	* msgcat-properties-1: Likewise.
	* msgcat-properties-2: Likewise.
	* msgcat-stringtable-1: Likewise.
	* msgcomm-17: Likewise.
	* msgcomm-18: Likewise.
	* msgcomm-19: Likewise.
	* msgcomm-21: Likewise.
	* msgcomm-23: Likewise.
	* msgconv-1: Likewise.
	* msgconv-2: Likewise.
	* msgconv-4: Likewise.
	* msgconv-5: Likewise.
	* msgen-1: Likewise.
	* msgen-2: Likewise.
	* msgen-3: Likewise.
	* msgfmt-1: Likewise.
	* msgfmt-2: Likewise.
	* msgfmt-3: Likewise.